Fixed resources layout issues

--- a/Mockups/V3_Integrated/index.css
+++ b/Mockups/V3_Integrated/index.css
@@ -170,7 +170,7 @@ h1{
 	justify-content:left;
 
 	padding-top: 25px;
-	padding-bottom: 40px;
+	/*padding-bottom: 40px;*/
 	padding-left: 2%;
 	padding-right: 40px;
 	overflow: auto;
@@ -221,6 +221,8 @@ h1{
 }#globe{
 	vertical-align: sub;
 	margin-top: 50px;
+}.blankSpace{
+	color: white;
 }
 
 
